# aoe4-twitch-integration

./: .gitignore  404.html  CNAME  docker-compose.yml  getCommand.ps1  index.html  package.json  pyproject.toml  suggestions.md
.github/: release.yml
.github/workflows/: build_and_deploy_frontend.yml  pr_require_labels.yml  release.yml
ExperimentalSomethingSomething/: ExperimentalSomethingSomething.aoe4mod
ExperimentalSomethingSomething/assets/: _default.burnproj  mod.rdo
Twitch Integration/: Twitch Integration.aoe4mod
Twitch Integration/assets/: _default.burnproj  mod.rdo
assets/: AboutView-0438d4e3.js  AboutView-0693de49.js  AboutView-1d82c190.js  AboutView-239db03b.js  AboutView-2792aed0.js  AboutView-39d452f3.js  AboutView-3af431d2.js  AboutView-3fd7ca1c.js  AboutView-57958094.js  AboutView-79af6adf.js  AboutView-94d417d8.js  AboutView-abaf4e37.js  AboutView-ac138086.js  AboutView-b12d08a4.js  AboutView-ba0eeac2.js  AboutView-bb591460.js  AboutView-bc562b1f.js  AboutView-c2e01574.js  AboutView-dcb1a154.js  AboutView-f4bece78.js  index-005a0058.css  index-030e0a68.css  index-06b7bcf9.js  index-0f773215.js  index-286ba333.css  index-33f6600f.js  index-35377b5a.js  index-394c3b99.css  index-5b452663.js  index-5d87333c.js  index-645a85c6.js  index-6cd84a77.js  index-6dfec9e8.js  index-6eb217f0.js  index-73526bd4.css  index-866b0e45.js  index-97908215.js  index-9c59f829.js  index-a9e35654.css  index-b77a8ad4.css  (+9 more)
backend/: Dockerfile  fly.toml  main.py  run.py
frontend/: .env  .env.production  .gitignore  index.html  package.json  vite.config.ts
(+38 files in other folders)
